
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int UNICODE_STRING ;
struct TYPE_4__ {int member_0; } ;
struct TYPE_5__ {scalar_t__ ImageHandle; int ImageName; TYPE_1__ member_0; } ;
typedef int OBJECT_ATTRIBUTES ;
typedef int NTSTATUS ;
typedef int IO_STATUS_BLOCK ;
typedef scalar_t__ BOOLEAN ;
typedef TYPE_2__ APPHELP_CACHE_SERVICE_LOOKUP ;
typedef int APPHELPCACHESERVICECLASS ;


 int FILE_EXECUTE ;
 int FILE_NON_DIRECTORY_FILE ;
 int FILE_READ_ATTRIBUTES ;
 int FILE_READ_DATA ;
 int FILE_SHARE_DELETE ;
 int FILE_SHARE_READ ;
 int FILE_SYNCHRONOUS_IO_NONALERT ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int InitializeObjectAttributes (int *,int *,int ,int *,int *) ;
 int NtClose (scalar_t__) ;
 int NtOpenFile (scalar_t__*,int,int *,int *,int,int) ;
 int OBJ_CASE_INSENSITIVE ;
 int STATUS_SUCCESS ;
 int SYNCHRONIZE ;
 int ok_ntstatus (int ,int ) ;
 int pNtApphelpCacheControl (int ,TYPE_2__*) ;

NTSTATUS CallCacheControl(UNICODE_STRING* PathName, BOOLEAN WithMapping, APPHELPCACHESERVICECLASS Service)
{
    APPHELP_CACHE_SERVICE_LOOKUP CacheEntry = { {0} };
    NTSTATUS Status;
    CacheEntry.ImageName = *PathName;
    if (WithMapping)
    {
        OBJECT_ATTRIBUTES LocalObjectAttributes;
        IO_STATUS_BLOCK IoStatusBlock;
        InitializeObjectAttributes(&LocalObjectAttributes, PathName,
            OBJ_CASE_INSENSITIVE, ((void*)0), ((void*)0));
        Status = NtOpenFile(&CacheEntry.ImageHandle,
                    SYNCHRONIZE | FILE_READ_ATTRIBUTES | FILE_READ_DATA | FILE_EXECUTE,
                    &LocalObjectAttributes, &IoStatusBlock,
                    FILE_SHARE_READ | FILE_SHARE_DELETE,
                    FILE_SYNCHRONOUS_IO_NONALERT | FILE_NON_DIRECTORY_FILE);
        ok_ntstatus(Status, STATUS_SUCCESS);
    }
    else
    {
        CacheEntry.ImageHandle = INVALID_HANDLE_VALUE;
    }
    Status = pNtApphelpCacheControl(Service, &CacheEntry);
    if (CacheEntry.ImageHandle != INVALID_HANDLE_VALUE)
        NtClose(CacheEntry.ImageHandle);
    return Status;
}
